compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__self_ref.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 10,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                    ),
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 16,
                                    end: 21,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 23,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 23,
                                            end: 27,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                    ty: Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 24,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 23,
                                                            end: 27,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 23,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 22,
                                            end: 27,
                                            start_line: 1,
                                            start_col: 23,
                                        },
                                    },
                                    span: Span {
                                        start: 22,
                                        end: 27,
                                        start_line: 1,
                                        start_col: 23,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 35,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 32,
                                                end: 35,
                                                start_line: 1,
                                                start_col: 33,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 32,
                                        end: 35,
                                        start_line: 1,
                                        start_col: 33,
                                    },
                                },
                            ),
                            effects: None,
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [],
                                    expr: Some(
                                        Expr {
                                            kind: Field {
                                                base: Expr {
                                                    kind: Path(
                                                        ExprPath {
                                                            segments: [
                                                                ExprPathSegment {
                                                                    name: Spanned {
                                                                        node: SymbolU32 {
                                                                            value: 4,
                                                                        },
                                                                        span: Span {
                                                                            start: 38,
                                                                            end: 42,
                                                                            start_line: 1,
                                                                            start_col: 39,
                                                                        },
                                                                    },
                                                                    args: None,
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 38,
                                                                end: 42,
                                                                start_line: 1,
                                                                start_col: 39,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 38,
                                                        end: 42,
                                                        start_line: 1,
                                                        start_col: 39,
                                                    },
                                                },
                                                field: Named(
                                                    Spanned {
                                                        node: SymbolU32 {
                                                            value: 6,
                                                        },
                                                        span: Span {
                                                            start: 43,
                                                            end: 44,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                ),
                                            },
                                            span: Span {
                                                start: 38,
                                                end: 44,
                                                start_line: 1,
                                                start_col: 39,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 36,
                                        end: 46,
                                        start_line: 1,
                                        start_col: 37,
                                    },
                                },
                            ),
                            span: Span {
                                start: 13,
                                end: 46,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 48,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 48,
        start_line: 1,
        start_col: 1,
    },
}
